--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "eslint-plugin-tsdoc"],
   "root": true,
-    "rules": {
-    "tsdoc/syntax": "error"
+  "rules": {
+    "tsdoc/syntax": "error",
+    "@typescript-eslint/member-ordering": "error"
   }
 }
