--- a/.github/workflows/typescript-checker.yml
+++ b/.github/workflows/typescript-checker.yml
@@ -5,8 +5,8 @@ name: Typescript Error Checker
 
 on:
   push:
-    paths: 
-      - 'src/*'
+    paths:
+      - "src/*"
 
 jobs:
   check-for-errors:
