--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marketaux-api",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "A TypeScript SDK for the marketaux API.",
   "main": "./dist/index.js",
   "types": "./types/index.d.ts",
@@ -9,7 +9,6 @@
     "test": "jest",
     "prebuild": "rimraf dist types",
     "build": "tsc",
-    "postbuild": "npm test",
     "build-docs": "typedoc",
     "watch": "tsc --watch",
     "prepack": "npm run build",
@@ -20,7 +19,11 @@
     "type": "git",
     "url": "git+https://github.com/Viriatto/npm-package-template.git"
   },
-  "keywords": [],
+  "keywords": [
+    "marketaux",
+    "api",
+    "typescript"
+  ],
   "author": "João Teixeira",
   "license": "ISC",
   "bugs": {
