make eslint ignore svg files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,5 @@
     "tsdoc/syntax": "error",
     "@typescript-eslint/member-ordering": "error"
   },
-  "ignorePatterns": ["*.md"]
+  "ignorePatterns": ["*.md", "*.svg"]
 }
